--- a/ Capstone Project- The Battle of Neighborhoods (Week 2).ipynb
+++ b/ Capstone Project- The Battle of Neighborhoods (Week 2).ipynb
@@ -38,9 +38,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Vancouver** is the 8th largest city in **Canada**, which is also called a \"city of neighborhoods\" because of its ethnic diversity. Also, Vancouver now has one of the highest concentrations of ethnic Chinese people in North America. Other major Asian groups in Vancouver includes South Asian (primarily Punjabi), Indo-Canadian (5.7%), Filipino (5.0%), Japanese (1.7%), Korean (1.5%), Vietnamese, Indonesian, and Cambodian. \n",
+    "**Vancouver** is the 8th largest city in **Canada**, which is also called a \"city of neighborhoods\" because of its ethnic diversity. Also, Vancouver now has one of the highest concentrations of ethnic Chinese people in North America. Other major Asian groups in Vancouver include South Asian (primarily Punjabi), Indo-Canadian (5.7%), Filipino (5.0%), Japanese (1.7%), Korean (1.5%), Vietnamese, Indonesian, and Cambodian. \n",
     "\n",
-    "To open up an Asian restaurant is always a popular choice for the first generation Asian immigrants to make a living in a new country. Therefore, finding a right location is crucial to start their business."
+    "To open up an Asian restaurant is always a popular choice for the first generation Asian immigrants to make a living in a new country. Therefore, finding the right location is crucial to start their business."
    ]
   },
   {
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The target audience of this research is the Asian immigrants group who are trying to find a great location to open an Asian restaurant."
+    "The target audience of this research is the Asian immigrants group who are trying to find a great neighborhood to open an Asian restaurant."
    ]
   },
   {
@@ -87,12 +87,12 @@
     "Based on the two factors we considered, we would need the detailed information about:\n",
     "* Crime rate of all the neighborhood in Vancouver, Canada\n",
     "* Coordinates of each neighborhood \n",
-    "* density of existing restaurants in the neighborhood, especially Asian restuarants\n",
+    "* Density of existing restaurants in the neighborhood, especially Asian restaurants\n",
     "\n",
     "To grab all these information and solve the problem, we need to extract what we need from the following resources:\n",
     "* Crime rate statistics would be obtained from a dataset from Kaggle containing the Vancouver Police Department's crime records from 2013 to 2019, which consists each Neighbourhood in Vancouver along with type of crime, recorded year, month, day, hour and minute, recorded block, GPS. **Dataset URL:** https://www.kaggle.com/agilesifaka/vancouver-crime-report/version/2\n",
     "* Coordinates of each neighborhood would be catched through **OpenCage Geocoder**\n",
-    "* Density of existing restaurants in the neighborhood, especially Asian restuarants will be obtained using **Foursquare API**"
+    "* Density of existing restaurants in the neighborhood, especially Asian restaurants will be obtained using **Foursquare API**"
    ]
   },
   {
@@ -979,7 +979,7 @@
     "\n",
     "**Exploratory Data Analysis**: We would use exploratory data analysis to narrow down our choices based on the crime records of different neighbourhood and present our results through plot and heatmaps. \n",
     "\n",
-    "**K-Means Clustering**: We would use K-Means clustering based on our consideration of the density of restruarants and especially Asian restuarants, while combine with the power of Foursquare to identify the most proper position to start an Asian restaurant."
+    "**K-Means Clustering**: With the help of Foursquare API, we would use K-Means clustering to cluster the neighbourhoods in the West Side and visualize the result by plotting it on maps using Folium. Through the cluster examination,  we would be able to identify the most proper position to start business based on the consideration of the density of Asian restaurants.\n"
    ]
   },
   {
@@ -4575,7 +4575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To consider the safety issue, we use the crime records the crime rate of all the neighborhood in Vancouver, Canada from 2018. Through the Exploratory Data Analysis, we successfully lockdown the West Side borough. Even though it is not the borough have the fewest cases, it owns the records of the second lowest crimes and has more neighborhoods compared to South Vancouver borough, who has the lowest crimes. Above that, through the exploration of  the break and enter commercial statistics by neighborhood in West Side, we come up with the result that among all 10 neighborhoods, Dunbar-Southlands, Shaughnessy, Arbutus Ridge, West Point Grey and Oakridge have the relatively low records in break and enter commercials crime.\n",
+    "To consider the safety issue, we use the crime records of all the neighborhoods in Vancouver, Canada from 2018. Through the Exploratory Data Analysis, we successfully lockdown the West Side borough. Even though it is not the borough that has the fewest cases, it owns the records of the second lowest crimes and has more neighborhoods compared to South Vancouver borough, who has the lowest crimes. Above that, through the exploration of  the break and enter commercial statistics by neighborhood in West Side, we come up with the result that among all 10 neighborhoods, Dunbar-Southlands, Shaughnessy, Arbutus Ridge, West Point Grey and Oakridge have the relatively low records in break and enter commercials crime.\n",
     "\n",
     "With the help of Foursquare API and OpenCage API, we’re able to use K-Means Clustering to cluster 10 neighborhoods into four clusters. Through examining each cluster, we find out the Cluster 2- Shaughnessy and Cluster 3- Arbutus Ridge are outstanding in the relatively low density of restaurants, especially Asian restaurants.\n",
     "\n",
@@ -4595,7 +4595,7 @@
    "source": [
     "Since the purpose of this report is to find a proper neighborhood for Asian immigrants to open up a new restaurant in Vancouver, Shaughnessy and Arbutus Ridge would be the top two choices to recommend based on the crime records and the density of existing restaurants and Asian restaurants.\n",
     "\n",
-    "However, the limitation of this research also need to be taken into consideration. Since, we didn’t have the population distribution statistics, the low crimes records might mean low residence population or low traffic. Also, the low density of restaurants might also mean low traffic during meal times. \n"
+    "However, the limitations of this research also need to be taken into consideration. Since, we didn’t have the population distribution statistics, the low crimes records might mean low residence population or low traffic. Also, the low density of restaurants might also mean low traffic during meal times. \n"
    ]
   },
   {
